--- a/modules/custom/custom_stains/templates/header-block.html.twig
+++ b/modules/custom/custom_stains/templates/header-block.html.twig
@@ -19,7 +19,7 @@
 							<a class="cart-icon" href="/cart">
 								<i class="fa fa-cart-shopping">{{drupal_view('commerce_cart_block')}}</i>
 							</a>
-							<a class="cart-icon" href="{{ drupal_url('user/'~ current_uid) }}" title="My-Account">
+							<a class="cart-icon" href="{{ drupal_url('user/') }}" title="My-Account">
 								<i class="fa fa-user"></i>
 							</a>
 							<a class="cart-icon" href="/user/logout" title="Logout">
