--- a/themes/custom/coffeestains/templates/views/commerce-store.html.twig
+++ b/themes/custom/coffeestains/templates/views/commerce-store.html.twig
@@ -23,7 +23,7 @@
 		<div class="shop-content">
 			<div class="row">
 				<div class="col-md-12">
-					{{ drupal_view('commerce_products','store_block')}}
+					{{ drupal_view('store_products','store_products_block')}}
 				</div>
 			</div>
 		</div>
